// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Part 1 should produce the correct value for the input data 1`] = `
Array [
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  9431221,
]
`;

exports[`Part 2 should produce the correct value for the input data 1`] = `
Array [
  1409363,
]
`;
